--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.4.1",
     "lucide-react": "^0.344.0",
     "ollama": "^0.5.11",
+    "openai": "^4.79.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1"
