Copilot Agent mode migrated the project to Next.js
Using the prompt: "I want to expand this project, and rather than just using React I want to use nextjs so I can begin coding a backend for it too."

Following a 1 hour session it got the project running again, though with some errors / fixes to be done still.

For posterity: https://x.com/xbito/status/1895111161953296896

--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
 dist
 dist-ssr
 *.local
+
+# Next.js
+/.next/
+/out/
+/build
+.next
+next-env.d.ts
 
 # Editor directories and files
 .vscode/*
@@ -23,5 +31,10 @@ dist-ssr
 *.sln
 *.sw?
 
+# Secrets and env files
 secrets/*
 .env
+.env*.local
+
+# Vercel
+.vercel
